# oc-droid

./: .env.example  .gitignore  .ignore  AGENTS.md  FORK_SYNC.md  LICENSE  README.md  gradle.properties  settings.gradle.kts
.opencode/: README.md
.slim/: clonedeps.json
APK/: oc-droid-0.3.12.md  oc-droid-0.4.0.md  oc-droid-0.4.1.md  oc-droid-0.4.2.md  oc-droid-0.5.0.md  oc-droid-0.5.1.md  oc-droid-0.5.2.md  oc-droid-0.5.3.md  oc-droid-0.5.4.md  oc-droid-0.6.0.md  oc-droid-0.6.1.md  oc-droid-0.6.2.md  oc-droid-0.6.3.md  oc-droid-0.6.4.md
app/: build.gradle.kts  proguard-rules.pro
docs/: 0.11-joint-roadmap.md  0.11-ux-first-joint-plan.md  Agents_manage.md  Android_Markdown_Web_Preview_PRD.md  Android_Markdown_Web_Preview_RFC.md  PRD.md  RFC.md  api-requirements-review-2026-07-18.md  architecture-v3-sse-trust.md  backlog-p1-p5.md  build-apk.md  design.md  dynamic-island-plan.md  emulator-debug.md  files-redesign-staging.md  mimo-code-borrowing-design.md  mtls-setup-guide.md  mtls-tunnel-plan.md  next-steps.md  opencode-11715-upgrade.md  opencode-sse-api.md  opencode-web-style-reference.md  post-v0.11.7-handoff.md  post-v0.11.7-phase2-plan.md  product-requirements-assessment.md  redesign-execution-entry.md  redesign-execution-plan.md  redesign-mobile-compose-scheme.md  (+31 more)
ui_driver/: README.md  pyproject.toml
ui_driver/tests/: conftest.py  test_adb_errors.py  test_cli.py  test_driver.py  test_integration.py  test_parsing.py
ui_driver/tests/fixtures/: chat_screen.xml  settings_screen.xml
ui_driver/ui_driver/: __init__.py  adb.py  cli.py  driver.py  parsing.py
(+995 files in other folders)
