[project]
name = "ui_driver"
version = "0.1.0"
description = "Deterministic adb/uiautomator UI driver for the opencode Android client"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
ui_driver = "ui_driver.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ui_driver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running emulator and env vars (skipped by default)",
]
